part1/7.log-output_ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: ghcr.io/antoine29/log-output
          args: ["-serverPort 80", "-strLength 5", "-secsInterval 10"]
