part1/7.log-output_ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: log-output-service
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8090


# this service is openning a cluster port in 2345 and forwarding to 'log-output' app at port 8090
